@@ -6,6 +6,8 @@ o safe predictions simplified in effect.lm(), producing correct results for mixe
 
 o plot.eff() now honors type argument.
 
+o nlme and lme4 moved to Suggests.
+
 Version 2.1-0
 
 o added support for 'mer' objects from lme4 and 'lme' objects from 'nlme'.  Added 'rotx', 'roty' and 'grid' arguments to the plot methods.
